src/test/ui/parser/issue-27255.stderr
error: missing `for` in a trait impl
  --> $DIR/issue-27255.rs:3:7
   |
LL | impl A .. {}
   |       ^ If I were you, I would simply add `for` here

error: missing `for` in a trait impl
  --> $DIR/issue-27255.rs:7:7
   |
LL | impl A      usize {}
   |       ^^^^^^ If I were you, I would simply add `for` here

error: `impl Trait for .. {}` is an obsolete syntax
  --> $DIR/issue-27255.rs:3:1
   |
LL | impl A .. {}
   | ^^^^^^^^^^^^
   |
   = help: use `auto trait Trait {}` instead

error: aborting due to 3 previous errors

